--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,42 +1,21 @@
-@use 'variables' as *;
+@use 'vars/colors' as *;
+@use 'vars/typography' as *;
 
 h1 {
-  font-family: 'Fraunces', serif;
-  font-weight: 900;
+  font-family: $font-serif;
+  font-weight: $font-900;
 }
 
 h2,
 h3,
 h4 {
-  font-family: 'Fraunces', serif;
-  font-weight: 700;
-}
-
-.link {
-  position: relative;
-  color: $desat-blue;
-}
-
-.link::before {
-  content: '';
-  position: absolute;
-  left: -7px;
-  right: -7px;
-  bottom: -2px;
-  height: 10px;
-  transition: opacity 0.6s cubic-bezier(0.53, 0.21, 0, 1);
-  background-color: $yellow;
-  opacity: 0.3;
-  border-radius: 99px;
-  z-index: -10;
-}
-
-.link:hover::before {
-  opacity: 0.8;
+  font-family: $font-serif;
+  font-weight: $font-700;
 }
 
 body {
-  font-family: 'Barlow', sans-serif;
-  font-weight: 600;
-  font-size: 18px;
+  font-family: $font-sans;
+  font-weight: $font-600;
+  font-size: $font-base;
+  text-align: center;
 }
