--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@use 'reset'; //CSS Reset
-@use 'base'; //Base Styles
-@use 'layout'; //Flexbox and Grid Stuff
-@use 'components'; //Section Styles
+@use 'reset'; // CSS Reset
+@use 'base'; // Base Styles
+@use 'helpers'; // Helper Classes
+@use './components/components'; // Components
