--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -1,21 +1,8 @@
-/* Box sizing rules */
+/* Box sizing rules and Remove default margin */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-/* Remove default margin */
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
   margin: 0;
 }
 
