--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,6 +1,6 @@
 @forward 'hero';
-@forward 'features';
-@forward 'services';
-@forward 'testimonials';
-@forward 'image-gallery';
-@forward 'footer';
+// @forward 'features';
+// @forward 'services';
+// @forward 'testimonials';
+// @forward 'image-gallery';
+// @forward 'footer';
