--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,7 +1,8 @@
 @use '../vars/colors' as *;
 @use '../vars/typography' as *;
+@use '_button';
 
-.banner {
+.hero {
   height: 68vh;
   min-height: 537px;
   background: url(/public/images/image-header.jpg);
@@ -9,51 +10,123 @@
   background-repeat: no-repeat;
   background-size: cover;
   color: $white;
-  display: flex;
-  flex-direction: column;
   width: 100%;
 
   @media (min-width: 768px) {
-    background: url(/public/images/image-header.jpg);
     height: 60vh;
     min-height: 785px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  }
+
+  .container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .header {
+    height: 30px;
+    width: 100%;
+    margin-top: 24px;
+
+    &__logo {
+      color: $white;
+    }
+
+    // Navigation
+
+    .navbar {
+      position: relative;
+
+      .mobile__nav {
+        position: fixed;
+        top: 105px;
+        left: 0;
+        right: 0;
+        display: block;
+        background-color: $white;
+        width: calc(100% - 44px);
+        margin-inline: auto;
+        min-height: 305px;
+
+        ul {
+          padding-block-start: 40px;
+          padding-block-end: 60px;
+          padding-inline: 0;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          gap: 38px;
+        }
+
+        a {
+          color: $dark-grayish-blue;
+        }
+
+        transform: scale(0);
+
+        ul li .mobile_btn {
+          margin-top: 100px;
+          color: $ver-dark-desat-blue;
+          background-color: $yellow;
+          font-family: $font-serif;
+          text-transform: uppercase;
+        }
+
+        @media (min-width: 768px) {
+          display: none;
+        }
+      }
+    }
+
+    .desktop__nav {
+      display: none;
+
+      @media (min-width: 768px) {
+        display: flex;
+        gap: 48px;
+      }
+    }
+
+    &__nav_toggle {
+      display: block;
+
+      @media (min-width: 768px) {
+        display: none;
+      }
+    }
+  }
+
+  // Hero Content
+  &__text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
   }
 }
 
-.header {
-  height: 30px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  margin-top: 24px;
-
-  &__logo {
-    color: $white;
-  }
-}
-
-.navbar {
-  display: none;
-}
-
-.hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
-
+.text {
   &__title {
     margin-top: -3rem;
-    font-size: 2.5rem;
+    font-size: $font-3xl;
     text-align: center;
+
+    @media (min-width: 768px) {
+      font-size: $font-4xl;
+    }
   }
 
   &__arrow_down {
-    margin-top: 3rem;
+    max-width: 36px;
+    width: 100%;
+    margin-top: 50px;
+
+    @media (min-width: 768px) {
+      margin-top: 100px;
+    }
   }
+}
+
+.open {
+  transform: scale(1);
 }
