Change: Added Nav Toggle Func and Features Section

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,6 +1,6 @@
 @forward 'hero';
-// @forward 'features';
-// @forward 'services';
+@forward 'features';
+@forward 'link';
 // @forward 'testimonials';
 // @forward 'image-gallery';
 // @forward 'footer';
