--- a/src/scss/components/_features.scss
+++ b/src/scss/components/_features.scss
@@ -1,67 +1,74 @@
+@use '../vars/colors' as *;
+@use '../vars/typography' as *;
+
 .features {
   display: flex;
   flex-direction: column;
 }
 
-.transform {
+.transform,
+.stand_out {
   text-align: center;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: 1fr;
 
   .container {
     min-height: 450px;
+  }
+
+  &__img {
+    object-fit: cover;
+    width: 100%;
   }
 
   &__text {
     padding: 36px 0;
   }
 
-  &__h1 {
+  &__heading {
     font-size: 2rem;
-    color: $desat-blue;
+    color: $very-dark-desat-blue;
   }
 
   &__info {
     margin: 24px 0;
     color: $dark-grayish-blue;
   }
+}
 
-  &__link {
-    font-family: 'Fraunces', serif;
-    font-weight: 700;
+.transform__link {
+  &::before {
+    background-color: $yellow;
   }
 }
 
-.stand_out {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-
-  .container {
-    min-height: 450px;
-  }
-
-  &__text {
-    padding: 36px 0;
-  }
-
-  h2 {
-    font-size: 2rem;
-    color: $desat-blue;
-  }
-
-  &__info {
-    margin: 24px auto;
-    color: $dark-grayish-blue;
-    max-width: 400px;
-  }
-
-  &__link {
-    font-family: 'Fraunces', serif;
-    font-weight: 700;
-  }
-
-  .link::before {
+.stand_out__link {
+  &::before {
     background-color: $soft-red;
+  }
+}
+
+@media (min-width: 768px) {
+  .transform {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    direction: rtl;
+
+    &__text {
+      padding: 0;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .stand_out {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-auto-flow: dense;
+    &__text {
+      padding: 0;
+    }
   }
 }
