--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -41,31 +41,29 @@
         top: 105px;
         left: 0;
         right: 0;
-        display: block;
+
         background-color: $white;
         width: calc(100% - 44px);
         margin-inline: auto;
         min-height: 305px;
-
-        ul {
-          padding-block-start: 40px;
-          padding-block-end: 60px;
-          padding-inline: 0;
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          gap: 38px;
-        }
+        display: flex;
+        flex-direction: column;
+        gap: 38px;
+        padding-block-start: 40px;
+        padding-block-end: 60px;
+        padding-inline: 0;
 
         a {
           color: $dark-grayish-blue;
         }
 
         transform: scale(0);
+        transform-origin: top right;
+        transition: transform 0.2s ease-in-out;
 
-        ul li .mobile_btn {
+        li .mobile_btn {
           margin-top: 100px;
-          color: $ver-dark-desat-blue;
+          color: $very-dark-desat-blue;
           background-color: $yellow;
           font-family: $font-serif;
           text-transform: uppercase;
@@ -74,6 +72,9 @@
         @media (min-width: 768px) {
           display: none;
         }
+      }
+      .open {
+        transform: scale(1);
       }
     }
 
@@ -125,8 +126,4 @@
       margin-top: 100px;
     }
   }
-}
-
-.open {
-  transform: scale(1);
 }
