--- a/src/scss/components/_link.scss
+++ b/src/scss/components/_link.scss
@@ -1,29 +1,26 @@
+@use '../vars/colors' as *;
+@use '../vars/typography' as *;
+
 .link {
   position: relative;
-  color: $dark-desat-blue;
-}
+  color: $very-dark-desat-blue;
+  font-family: $font-serif;
+  font-weight: $font-700;
 
-.link::before {
-  content: '';
-  position: absolute;
-  left: -7px;
-  right: -7px;
-  bottom: -2px;
-  height: 10px;
-  transition: opacity 0.6s cubic-bezier(0.53, 0.21, 0, 1);
-  opacity: 0.3;
-  border-radius: 99px;
-  z-index: -10;
-}
+  &::before {
+    content: '';
+    position: absolute;
+    left: -7px;
+    right: -7px;
+    bottom: -2px;
+    height: 10px;
+    transition: opacity 0.6s cubic-bezier(0.53, 0.21, 0, 1);
+    opacity: 0.3;
+    border-radius: 99px;
+    z-index: -10;
+  }
 
-.link:hover::before {
-  opacity: 0.8;
-}
-
-.link-yellow::before {
-  background: $yellow;
-}
-
-.link-red::before {
-  background: $soft-red;
+  &:hover::before {
+    opacity: 0.8;
+  }
 }
