--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,3 +2,4 @@
 @use 'base'; // Base Styles
 @use 'helpers'; // Helper Classes
 @use './components/components'; // Components
+@use './components/link';
