--- a/src/scss/vars/_colors.scss
+++ b/src/scss/vars/_colors.scss
@@ -8,7 +8,7 @@ $dark-blue: hsl(198, 62%, 26%); // Services - Photography
 $dark-mod-cyan: hsl(168, 34%, 41%); // Footer
 
 // Neutrals
-$ver-dark-desat-blue: hsl(212, 27%, 19%);
+$very-dark-desat-blue: hsl(212, 27%, 19%);
 $very-dark-grayish-blue: hsl(213, 9%, 39%);
 $dark-grayish-blue: hsl(232, 10%, 55%);
 $grayish-blue: hsl(210, 4%, 67%);
