--- a/src/scss/components/_image_gallery.scss
+++ b/src/scss/components/_image_gallery.scss
@@ -1,15 +1,20 @@
 .image-gallery {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+
+  @media (min-width: 768px) {
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(4, 1fr);
+  }
 
   img {
     margin: 0 auto;
     aspect-ratio: 1/1;
     object-fit: cover;
+    width: 100%;
   }
 
   @media screen and (min-width: 48rem) {
-    grid-template-columns: none;
   }
 }
